--- a/base-frontend/package.json
+++ b/base-frontend/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "jwt-decode": "^3.0.0",
     "moment": "2.24.0",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.6.3",
     "tslib": "^1.9.0",
@@ -38,9 +39,9 @@
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -51,7 +52,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "tslint": "^5.11.0",
+    "typescript": "^3.2.4"
   }
 }
