--- a/base-frontend/package.json
+++ b/base-frontend/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "jwt-decode": "^3.0.0",
     "moment": "2.24.0",
+    "ng-mat-search-bar": "^10.0.0-beta.3",
     "node-sass": "^4.14.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.6.3",
