--- a/base-frontend/package.json
+++ b/base-frontend/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "generate:api": "openapi-generator-cli generate -g typescript-angular -i http://localhost:5000/swagger/v1/swagger.json -o ./src/app/shared/client"
+    "generate:api": "openapi-generator-cli generate -g typescript-angular -i http://localhost:55368/swagger/v1/swagger.json -o ./src/app/shared/client"
   },
   "private": true,
   "dependencies": {
